syntax = "proto3";

option go_package = "go.klev.dev/klevs/protocol/grpc";

import "google/protobuf/timestamp.proto";

package grpc;

message PublishMessage {
  google.protobuf.Timestamp time = 2;
  bytes key = 3;
  bytes value = 4;
}

message ConsumeMessage {
  int64 offset = 1;
  google.protobuf.Timestamp time = 2;
  bytes key = 3;
  bytes value = 4;
}

service Messages {
  rpc Publish(PublishRequest) returns (PublishResponse) {}
  rpc NextOffset(NextOffsetRequest) returns (NextOffsetResponse) {}

  rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
  rpc GetByOffset(GetByOffsetRequest) returns (GetByOffsetResponse) {}
  rpc GetByKey(GetByKeyRequest) returns (GetByKeyResponse) {}
  rpc GetByTime(GetByTimeRequest) returns (GetByTimeResponse) {}
}

message PublishRequest {
  string name = 1;
  repeated PublishMessage messages = 2;
}

message PublishResponse {
  int64 next_offset = 1;
}

message NextOffsetRequest {
  string name = 1;
}

message NextOffsetResponse {
  int64 next_offset = 1;
}

message ConsumeRequest {
  string name = 1;
  int64 offset = 2;
  int64 max_count = 3;
}

message ConsumeResponse {
  int64 next_offset = 1;
  repeated ConsumeMessage messages = 2;
}

message GetByOffsetRequest {
  string name = 1;
  int64 offset = 2;
}

message GetByOffsetResponse {
  ConsumeMessage message = 1;
}

message GetByKeyRequest {
  string name = 1;
  bytes key = 3;
}

message GetByKeyResponse {
  ConsumeMessage message = 1;
}

message GetByTimeRequest {
  string name = 1;
  google.protobuf.Timestamp time = 2;
}

message GetByTimeResponse {
  ConsumeMessage message = 1;
}
